lab_security_group.tf
resource "aws_security_group" "twotier_lb_sg" {
  name        = var.lab_sg_name
  description = "Allow tls for inbound traffic"
  vpc_id = aws_vpc.twotiervpc.id

  ingress {
    description      = "HTTP from VPC"
    from_port        = 80
    to_port          = 80
    protocol         = "tcp"
    cidr_blocks      = ["0.0.0.0/0"]
  }

  egress {
    from_port        = 0
    to_port          = 0
    protocol         = "-1"
    cidr_blocks      = ["0.0.0.0/0"]
    ipv6_cidr_blocks = ["::/0"]
  }

  tags = {
    Name = "allow_tls"
  }
}
